@@ -4,6 +4,8 @@ Changelog
 1.0rc4 - unreleased
 -------------------
 
+* Fix quote_param to always use lxml.etree.XSLT.strparam.
+
 * Handle rules file without a theme to allow drop or replace content.
 
 1.0rc3 - 2011-07-04
